--- a/API_Product/API_Product/pom.xml
+++ b/API_Product/API_Product/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>gkiweb</artifactId>
+	<artifactId>API_Product</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gkiweb</name>
+	<name>API_Product</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -30,7 +30,6 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -56,7 +55,6 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
