--- a/API_Product/API_Product/src/main/resources/application.properties
+++ b/API_Product/API_Product/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=gkiweb
+spring.application.name=API_Product
 # Cấu hình kết nối MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bookdb?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/productdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,4 +10,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # JPA (Hibernate) settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
